# sufle-api

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
config/: .env.template
docker/: docker-compose.cert.yml  docker-compose.prod.yml  docker-compose.stage.yml
docker/backup/: Dockerfile
docker/backup/maintenance/: backup  backups  clean  cycle  restore
docker/django/: Dockerfile  entrypoint.sh
docker/django/gunicorn/: config.py  start.sh
docker/nginx/cert/: default.conf
docker/nginx/prod/: default.conf
docker/nginx/stage/: default.conf
logs/: .gitignore
server/: urls.py
server/apps/announcement/: admin.py  apps.py  models.py  views.py
server/apps/announcement/logic/: serializers.py
server/apps/announcement/migrations/: 0001_initial.py  0002_advert.py
server/apps/category/: admin.py  apps.py  models.py  views.py
server/apps/contact/: admin.py  apps.py  models.py  views.py
server/apps/core/: models.py  pagination.py
server/apps/gallery/: admin.py  apps.py  models.py  views.py
server/apps/product/: admin.py  apps.py  models.py  views.py
server/apps/shop/: admin.py  apps.py  models.py  views.py
server/apps/user/: admin.py  models.py  urls.py  views.py
server/apps/vacancy/: admin.py  apps.py  models.py  views.py
server/settings/: __init__.py
server/settings/components/: __init__.py  caches.py  common.py  database.py  email.py  healthcheck.py  logging.py  restframework.py
server/settings/environments/: __init__.py  development.py  local.py  production.py
(+41 files in other folders)
